# golmanager-panel

./: .env  .env.example  pyproject.toml
core/: admin.py  models.py
golmanager-adminpanel/: index.html  package-lock.json  package.json
golmanager-adminpanel/src/: App.tsx  index.css
golmanager-adminpanel/src/components/: index.ts
golmanager-adminpanel/src/components/Alert/: Alert.tsx
golmanager-adminpanel/src/components/Header/: Header.tsx
golmanager-adminpanel/src/components/Sidebar/: Sidebar.tsx
golmanager-adminpanel/src/views/: index.ts
golmanager-adminpanel/src/views/Administradores/: Administradores.tsx
golmanager-adminpanel/src/views/Ajustes/Competicion/: Competicion.tsx
golmanager-adminpanel/src/views/Ajustes/Configuracion/: Configuracion.tsx
golmanager-adminpanel/src/views/Ajustes/Localidad/: Localidad.tsx
golmanager-adminpanel/src/views/CategoriasEntrenamiento/: CategoriasEntrenamiento.tsx
golmanager-adminpanel/src/views/Clientes/: Clientes.tsx  CuentasEliminadas.tsx
golmanager-adminpanel/src/views/Colaboradores/: Colaboradores.tsx
golmanager-adminpanel/src/views/Cupones/: Cupones.tsx
golmanager-adminpanel/src/views/Home/: Home.tsx
golmanager-adminpanel/src/views/Login/: Login.tsx
golmanager-adminpanel/src/views/Main/: Main.tsx
golmanager-adminpanel/src/views/MaterialesEntrenamiento/: MaterialesEntrenamiento.tsx
golmanager-adminpanel/src/views/TipoJustificacion/: TipoJustificacion.tsx
golmanager-adminpanel/src/views/TiposNotificaciones/: TiposNotificaciones.tsx
panel/: asgi.py  settings.py  urls.py  wsgi.py
(+17 files in other folders)
